--- a/alternate.css
+++ b/alternate.css
@@ -1,4 +1,3 @@
-/* Add a black background color to the top navigation */
 .topnav {
     background-color: #333;
     overflow: hidden;
@@ -109,4 +108,43 @@ float:inline-end;
             background: #fff;
         
           }
+          
+.page-footer {
+	text-align: center;
+	}
+
+.page-footer .contact {
+	padding: 100px 0;
+	background-color: yellowgreen;
+	color: #fff;
+	}
+
+.page-footer .contact p {
+	font-size: 22px;
+	font-weight: 300;
+	}
+	
+.content-3 .glyphicon,	
+.page-footer .contact .glyphicon {
+	font-size: 32px;
+	font-weight: 700;
+	}
+		
+.page-footer .small-print {
+	padding: 50px 0 40px;
+	font-weight: 300;
+    }
     
+@media screen and (max-width: 900px) {
+        iframe {
+            width: 340;
+            height: 350;
+        }
+
+    }
+    .fa-github{
+text-decoration: none;
+    }
+    .fa-linkedin{
+        text-decoration: none;
+    }
