--- a/website.css
+++ b/website.css
@@ -1,8 +1,10 @@
 html,
 body {
-    width: 99%;
-    height: 99%;
+    width: 100%;
+    height: 100%;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+    margin: 0;
+    overflow-x: hidden;
 }
 a {
     color: yellowgreen;
@@ -195,7 +197,13 @@ header .header-content .header-content-inner p {
 .item-3 {
 	background-size: cover;
 	background-position: 50% 50%;
-	}
+    }
+    .footer{
+position:fixed;  
+bottom: 0;     
+
+    }
+    
 
 .page-footer {
 	text-align: center;
