--- a/website.css
+++ b/website.css
@@ -58,13 +58,13 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url('http://www.technocrazed.com/wp-content/uploads/2015/12/Landscape-wallpaper-36.jpg');
+    background-image: url('https://source.unsplash.com/1600x900/?nature,water,city,landscape,night,islands');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    background-color: yellowgreen;
+    background-color: black;
 }
 
 header .header-content {
@@ -78,15 +78,17 @@ header .header-content .header-content-inner h1 {
     margin-top: 0;
     margin-bottom: 20px;
     font-size: 50px;
+    color: aqua;
     font-weight: 300;
 }
 
 header .header-content .header-content-inner p {
     margin-bottom: 50px;
-    font-size: 16px;
+    font-size: 32px;
     font-weight: 300;
-    color: rgba(255,255,255,.7);
-}
+    font-style: italic;
+    font-family:'Times New Roman', Times, serif;
+    color: #39ff14}
 
 @media(min-width:768px) {
     header {
@@ -118,8 +120,8 @@ header .header-content .header-content-inner p {
         margin-right: auto;
         margin-left: auto;
         max-width: 80%;
-        font-size: 25px;
-        color:bisque;
+        font-size: 24px;
+        color: #39ff14;
         font-style: italic;
         font-family:'Times New Roman', Times, serif;
     }
