--- a/alternate.css
+++ b/alternate.css
@@ -173,7 +173,7 @@ text-decoration: none;
         height: 30%;
     }
    #item-1.col-lg-6 {
-        background: url("IMG_0947.jpg");
+        background: url("IMG_0947.JPG");
         background-size: 675px;
         color: #fff;
         margin-bottom: 2px;
